Delete cms ids, update content

--- a/tutorial.yaml
+++ b/tutorial.yaml
@@ -1,4 +1,4 @@
-title: "Games Track Lectures"
+title: "Cpp Games Track Lectures"
 cover: cover.png
 teaser_text: |
-    Here are all the lectures for the games track.
+    Here are all the lectures for the C++ games track.
